[package]
name = "cats-utils"
version = "0.1.0"
edition = "2021"
authors = ["CATS <Aurelien.Couthures@gmail.com>"]
description = "utilities for CATS' crates"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoAuToSe/cats-utils"
homepage = "https://github.com/CoAuToSe/cats-utils"
documentation = "https://docs.rs/cats-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
